--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Vaughn Antonyan</title>
+	<title>Vaughn Antonyan | LEGENDARY</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -46,9 +46,9 @@
          <ul id="nav" class="nav">
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
             <li><a class="smoothscroll" href="#about">About</a></li>
-	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
+	         <li><a class="smoothscroll" href="#resume">Blog</a></li>
             <li><a class="smoothscroll" href="#portfolio">Works</a></li>
-            <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
+            <!--<li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>-->
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
          </ul> <!-- end #nav -->
 
@@ -56,8 +56,8 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">I'm Jonathan Doe.</h1>
-            <h3>I'm a Manila based <span>graphic designer</span>, <span>illustrator</span> and <span>webdesigner</span> creating awesome and
+            <h1 class="responsive-headline">Vaughn Antonyan.</h1>
+            <h3>I'm a Los Angeles based <span>composer</span>, <span>web designer</span> and <span>software developer</span> creating awesome and
             effective visual identities for companies of all sizes around the globe. Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
@@ -96,12 +96,11 @@
 
             <h2>About Me</h2>
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+            <p>Early in life I was fortunate to fall in love with the magic of music & technology.
+              A fan of thoughful conversation, passionate for all things tech, and obsessed with constant progression. I'm currently working
+              on building a revolutionary on-demand software platform; make sure to check back for details as the project comes to fruition!
+
+              </aside>
             </p>
 
             <div class="row">
@@ -110,12 +109,10 @@
 
                   <h2>Contact Details</h2>
                   <p class="address">
-						   <span>Jonathan Doe</span><br>
-						   <span>1600 Amphitheatre Parkway<br>
-						         Mountain View, CA 94043 US
-                     </span><br>
-						   <span>(123)456-7890</span><br>
-                     <span>anyone@website.com</span>
+						   <span>Vaughn Antonyan</span><br>
+						   <span>Los Angeles, CA USA<br></span>
+						   <span>(818)653-0384</span><br>
+                     <span>frontdesk@vaughnantonyan.com</span>
 					   </p>
 
                </div>
