--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
             <div class="row">
 
-               INSERT LANGUAGE ICONS HERE 
+               INSERT LANGUAGE ICONS HERE
 
             </div> <!-- end row -->
 
@@ -299,9 +299,7 @@
 
                      <li>
                         <blockquote>
-                           <p>Your work is going to fill a large part of your life, and the only way to be truly satisfied is
-                           to do what you believe is great work. And the only way to do great work is to love what you do.
-                           If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
+                           <p>The people who are crazy enough to think they can change the world are the ones who do.
                            </p>
                            <cite>Steve Jobs</cite>
                         </blockquote>
@@ -309,11 +307,17 @@
 
                      <li>
                         <blockquote>
-                           <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                           Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                           nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
+                           <p>NEW QUOTE
                            </p>
-                           <cite>Mr. Adobe</cite>
+                           <cite>Steve Jobs</cite>
+                        </blockquote>
+                     </li> <!-- slide ends -->
+
+                     <li>
+                        <blockquote>
+                           <p>If everything seems under control, you're just not going fast enough.
+                           </p>
+                           <cite>Mario Andretti</cite>
                         </blockquote>
                      </li> <!-- slide ends -->
 
