Add icons, fix colors

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 	<link rel="stylesheet" href="css/layout.css">
    <link rel="stylesheet" href="css/media-queries.css">
    <link rel="stylesheet" href="css/magnific-popup.css">
+   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
    <!-- Script
    ================================================== -->
@@ -46,9 +48,8 @@
          <ul id="nav" class="nav">
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
             <li><a class="smoothscroll" href="#about">About</a></li>
-	         <li><a class="smoothscroll" href="#resume">Writings</a></li>
-            <li><a class="smoothscroll" href="#portfolio">Works</a></li>
-            <!--<li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>-->
+	         <li><a class="smoothscroll" href="#portfolio">Writings</a></li>
+            <li><a class="smoothscroll" href="#works">Works</a></li>
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
          </ul> <!-- end #nav -->
 
@@ -62,13 +63,11 @@
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <li><a href="#"><i class="fa fa-github"></i></a></li>
+               <li><a href="#"><i class="fa fa-codepen"></i></a></li>
+               <li><a href="#"><i class="fa fa-soundcloud"></i></a></li>
+               <li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
             </ul>
          </div>
       </div>
@@ -98,14 +97,29 @@
 
             <p>Early in life I was fortunate to fall in love with the magic of music & technology.
               A fan of thoughful conversation, passionate for all things tech, and obsessed with constant progression. I'm currently working
-              on building a revolutionary on-demand software platform; make sure to check back for details as the project comes to fruition! <a href="#contact">Contact today!</a>
+              on building a revolutionary on-demand software platform; make sure to check back for details as the project comes to fruition!
 
               </aside>
             </p>
 
             <div class="row">
 
-               INSERT LANGUAGE ICONS HERE
+               <div class="twelve columns languages">
+
+                 <i class="devicon-html5-plain"></i>
+                 <i class="devicon-css3-plain"></i>
+                 <i class="devicon-bootstrap-plain-wordmark"></i>
+                 <i class="devicon-javascript-plain"></i>
+                 <i class="devicon-jquery-plain-wordmark"></i>
+                 <i class="devicon-ruby-plain"></i>
+                 <i class="devicon-rails-plain"></i>
+                 <i class="devicon-php-plain"></i>
+                 <i class="devicon-mysql-plain-wordmark"></i>
+                 <i class="devicon-git-plain"></i>
+                 <i class="devicon-photoshop-plain"></i>
+                 <i class="devicon-illustrator-plain"></i>
+
+               </div>
 
             </div> <!-- end row -->
 
@@ -287,8 +301,6 @@
 
             <div class="two columns header-col">
 
-               <h1><span>Client Testimonials</span></h1>
-
             </div>
 
             <div class="ten columns flex-container">
@@ -299,7 +311,9 @@
 
                      <li>
                         <blockquote>
-                           <p>The people who are crazy enough to think they can change the world are the ones who do.
+                           <p>Your work is going to fill a large part of your life, and the only way to be truly satisfied is
+                           to do what you believe is great work. And the only way to do great work is to love what you do.
+                           If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
                            </p>
                            <cite>Steve Jobs</cite>
                         </blockquote>
@@ -307,17 +321,11 @@
 
                      <li>
                         <blockquote>
-                           <p>NEW QUOTE
+                           <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
+                           Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
+                           nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
                            </p>
-                           <cite>Steve Jobs</cite>
-                        </blockquote>
-                     </li> <!-- slide ends -->
-
-                     <li>
-                        <blockquote>
-                           <p>If everything seems under control, you're just not going fast enough.
-                           </p>
-                           <cite>Mario Andretti</cite>
+                           <cite>Mr. Adobe</cite>
                         </blockquote>
                      </li> <!-- slide ends -->
 
@@ -335,7 +343,7 @@
 
    <!-- Portfolio Section
    ================================================== -->
-   <section id="portfolio">
+   <span id="#works"><section id="portfolio"></span>
 
       <div class="row">
 
@@ -637,15 +645,15 @@
 
          <div class="row section-head">
 
-            <div class="two columns header-col">
+            <div class="twelve columns header-col">
 
                <h1><span>Get In Touch.</span></h1>
 
             </div>
 
-            <div class="ten columns">
+            <div class="twelve columns">
 
-              <div class="widget widget_contact">
+              <div class="widget widget_contact contact">
 
             <h4>Contact Details</h4>
             <p class="address">
@@ -672,18 +680,16 @@
          <div class="twelve columns">
 
             <ul class="social-links">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fa fa-github"></i></a></li>
+              <li><a href="#"><i class="fa fa-codepen"></i></a></li>
+              <li><a href="#"><i class="fa fa-soundcloud"></i></a></li>
+              <li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
             </ul>
 
             <ul class="copyright">
-               <li>&copy; Copyright 2014 CeeVee</li>
-               <li>Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>
+               <li>&copy; Copyright 2018</li>
+               <li>Vaughn Antonyan</li>
             </ul>
 
          </div>
