Fix image paths

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           	   <div class="columns portfolio-item">
                   <div class="item-wrap">
                      <a href="#modal-01" title="">
-                        <img alt="" src="images/portfolio/works1.jpg">
+                        <img alt="" src="images/works1.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					       <h5>Programmers and Music</h5>
@@ -126,7 +126,7 @@
                <div class="columns portfolio-item">
                   <div class="item-wrap">
                      <a href="#modal-02" title="">
-                        <img alt="" src="images/portfolio/works2.jpg">
+                        <img alt="" src="images/works2.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					       <h5>Composing Code</h5>
@@ -141,7 +141,7 @@
                <div class="columns portfolio-item">
                   <div class="item-wrap">
                      <a href="#modal-03" title="">
-                        <img alt="" src="images/portfolio/works3.jpg">
+                        <img alt="" src="images/works3.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					       <h5>Languages of Digital Sound</h5>
@@ -156,7 +156,7 @@
                <div class="columns portfolio-item">
                   <div class="item-wrap">
                      <a href="#modal-04" title="">
-                        <img alt="" src="images/portfolio/works4.jpg">
+                        <img alt="" src="images/works4.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					       <h5>Agile Orchestras</h5>
@@ -175,7 +175,7 @@
          <!-- Works Popup -->
 
          <div id="modal-01" class="popup-modal mfp-hide">
-		      <img class="scale-with-grid" src="images/portfolio/modals/works1-m.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/works1-m.jpg" alt="" />
 		      <div class="description-box">
 			      <h4>Programmers and Music</h4>
 			      <p>In the past few months I have had many opportunities of meeting with people who write code for a living. Interestingly enough, I have found that many of these programmers are also talented musicians. Is there a positive correlation between musical and coding ability or are musicians and programmers like mathematicians of a different cognitive ability? Let’s take a moment to explore..<br><br>
@@ -192,7 +192,7 @@
 	      </div>
 
          <div id="modal-02" class="popup-modal mfp-hide">
-		      <img class="scale-with-grid" src="images/portfolio/modals/works2-m.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/works2-m.jpg" alt="" />
 		      <div class="description-box">
 			      <h4>Composing Code</h4>
 			      <p>“If I were not a physicist, I would probably be a musician. I often think in music. I live my daydreams in music. I see my life in terms of music.” – Albert Einstein<br><br>
@@ -210,7 +210,7 @@
 	      </div>
 
          <div id="modal-03" class="popup-modal mfp-hide">
-		      <img class="scale-with-grid" src="images/portfolio/modals/works3-m.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/works3-m.jpg" alt="" />
 		      <div class="description-box">
 			      <h4>Languages behind Digital Music</h4>
 			      <p>“Once you free your mind about a concept being correct, true innovation is born.”<br><br>
@@ -226,7 +226,7 @@
 	      </div>
 
          <div id="modal-04" class="popup-modal mfp-hide">
-		      <img class="scale-with-grid" src="images/portfolio/modals/works4-m.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/works4-m.jpg" alt="" />
 		      <div class="description-box">
 			      <h4>Agile Orchestras</h4>
 			      <p>I’m told I’ve been obsessed with music and sound since I was a baby. Growing up playing the violin was my childhood dream come true. From the time I was in elementary school all the way through college, I was always participating in the school orchestra. Recently, I’ve been thinking about how the teamwork involved in an orchestra directly relates to agile software development.<br><br>
@@ -292,7 +292,7 @@
           	   <div class="columns portfolio-item">
                   <div class="item-wrap">
                      <a href="#modal-05" title="">
-                        <img alt="" src="images/portfolio/port1.jpg">
+                        <img alt="" src="images/port1.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
             					       <h5>Social Network</h5>
@@ -307,7 +307,7 @@
                <div class="columns portfolio-item">
                   <div class="item-wrap">
                      <a href="#modal-06" title="">
-                        <img alt="" src="images/portfolio/port2.jpg">
+                        <img alt="" src="images/port2.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					          <h5>Garage54.net</h5>
@@ -322,7 +322,7 @@
                <div class="columns portfolio-item">
                   <div class="item-wrap">
                      <a href="#modal-07" title="">
-                        <img alt="" src="images/portfolio/judah.jpg">
+                        <img alt="" src="images/judah.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					          <h5>vahagsy.com</h5>
@@ -337,7 +337,7 @@
                <div class="columns portfolio-item">
                   <div class="item-wrap">
                      <a href="#modal-08" title="">
-                        <img alt="" src="images/portfolio/port4.jpg">
+                        <img alt="" src="images/port4.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					          <h5>Productivity Trainer</h5>
@@ -356,7 +356,7 @@
          <!-- Portfolio Popup -->
 
          <div id="modal-05" class="popup-modal mfp-hide">
-		      <img class="scale-with-grid" src="images/portfolio/modals/port1-m.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/port1-m.jpg" alt="" />
 		      <div class="description-box">
 			      <h4>Social Network</h4>
 			      <p>An online news and social networking service where users post and interact with messages. Think twitter. This project is a work in progress, check <a class="modala" href="https://github.com/vaughnanton/twitter_app">here</a> for constant updates to the code until the web application is completed and released!</p>
@@ -368,7 +368,7 @@
 	      </div>
 
          <div id="modal-06" class="popup-modal mfp-hide">
-		      <img class="scale-with-grid" src="images/portfolio/modals/port2-m.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/port2-m.jpg" alt="" />
 		      <div class="description-box">
 			      <h4>Garage54</h4>
 			      <p>Branding and website design for a wonderfully new & modern automotive shop. Check the website in action by following this <a class="modala" href="https://www.garage54.net">link</a>.</p>
@@ -379,7 +379,7 @@
 	      </div>
 
          <div id="modal-07" class="popup-modal mfp-hide">
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-judah.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/m-judah.jpg" alt="" />
 		      <div class="description-box">
 			      <h4>vahagsy</h4>
 			      <p>Branding and website design for my personal music site. Check it out <a class="modala" href="https://www.vahagsy.com">here</a>.</p>
@@ -391,7 +391,7 @@
 	      </div>
 
          <div id="modal-08" class="popup-modal mfp-hide">
-		      <img class="scale-with-grid" src="images/portfolio/modals/port4-m.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/port4-m.jpg" alt="" />
 		      <div class="description-box">
 			      <h4>Pomodoro Timer</h4>
 			      <p>The Pomodoro Technique is a time management system that uses a timer to break down work into intervals, traditionally 25 minutes in length, separated by short breaks. This app employs the Pomodoro method with customizable work and break lengths, including an alarm at the end of each sequence! Get productive now by using the <a class="modala" href="https://codepen.io/vaughnanton/pen/eWdxBr">demo</a>.</p>
