Contact addition begins

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
    <!-- WEB DESIGN CONTACT FORM GOES HERE -->
    <!-- WEB DESIGN CONTACT FORM GOES HERE -->
-   <!-- WEB DESIGN CONTACT FORM GOES HERE -->
+   <!-- SEE NOTES AND GRAPHIC DESIGN IDEAS -->
 
    <!-- Writings Section -->
    <section id="portfolio">
