Update optimized photos and add portfolio item

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                         <div class="overlay">
                            <div class="portfolio-item-meta">
             					       <h5>Social Network</h5>
-                             <p>Software</p>
+                             <p>Networking App</p>
           					       </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -345,13 +345,28 @@
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					          <h5>Productivity Trainer</h5>
-                              <p>Utility</p>
+                              <p>Utility App</p>
           					       </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
                      </a>
                   </div>
           		</div>
+
+              <div class="columns portfolio-item">
+                 <div class="item-wrap">
+                    <a href="#modal-09" title="">
+                       <img alt="" src="images/matt.jpg">
+                       <div class="overlay">
+                          <div class="portfolio-item-meta">
+                             <h5>mattoriel.cm</h5>
+                             <p>Web</p>
+                          </div>
+                       </div>
+                       <div class="link-icon"><i class="icon-plus"></i></div>
+                    </a>
+                 </div>
+             </div>
 
             </div>
          </div>
@@ -404,6 +419,17 @@
 		         <a class="popup-modal-dismiss">Close</a>
           </div>
 	      </div>
+
+        <div id="modal-09" class="popup-modal mfp-hide">
+         <img class="scale-with-grid" src="images/m-matt.jpg" alt="" />
+         <div class="description-box">
+           <h4>Matt Oriel</h4>
+           <p><a class="modala" href="https://vaughnanton.github.io/mattSite/">This project</a> is currently in the works for a client. Our main focus with Matt's portfolio site is to keep things minimal, clean, and most importantly responsive!</p>
+         </div>
+         <div class="link-box">
+            <a class="popup-modal-dismiss">Close</a>
+         </div>
+       </div>
 
       </div>
    </section>
