Fix mailto link

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                        <img alt="" src="images/matt.jpg">
                        <div class="overlay">
                           <div class="portfolio-item-meta">
-                             <h5>mattoriel.cm</h5>
+                             <h5>mattoriel.com</h5>
                              <p>Web</p>
                           </div>
                        </div>
@@ -449,7 +449,8 @@
                   Vaughn Antonyan<br>
                   Los Angeles, CA USA<br>
                   <span>(818) 653-0384</span><br>
-                  frontdesk@vaughnantonyan.com</p>
+                  <a href="mailto:frontdesk@builtbyvaughn.com?Subject=Hello%20">frontdesk@builtbyvaughn.com</a>
+                </p>
               </div>
             </div>
 
