--- a/index.html
+++ b/index.html
@@ -353,6 +353,21 @@
                   </div>
           		</div>
 
+              <div class="columns portfolio-item hideMe">
+                 <div class="item-wrap">
+                    <a href="#modal-11" title="">
+                       <img alt="" src="images/matt.jpg">
+                       <div class="overlay">
+                          <div class="portfolio-item-meta">
+                             <h5>Minimalist Template</h5>
+                             <p>Web</p>
+                          </div>
+                       </div>
+                       <div class="link-icon"><i class="icon-plus"></i></div>
+                    </a>
+                 </div>
+             </div>
+
               <div class="columns portfolio-item">
                  <div class="item-wrap">
                     <a href="#modal-09" title="">
@@ -382,6 +397,21 @@
                    </a>
                 </div>
             </div>
+
+            <div class="columns portfolio-item hideMe">
+               <div class="item-wrap">
+                  <a href="#modal-12" title="">
+                     <img alt="" src="images/matt.jpg">
+                     <div class="overlay">
+                        <div class="portfolio-item-meta">
+                           <h5>Minimalist Template</h5>
+                           <p>Web</p>
+                        </div>
+                     </div>
+                     <div class="link-icon"><i class="icon-plus"></i></div>
+                  </a>
+               </div>
+           </div>
 
             </div>
          </div>
@@ -450,7 +480,7 @@
         <img class="scale-with-grid" src="images/m-matt.jpg" alt="" />
         <div class="description-box">
           <h4>Minimalist Website Template</h4>
-          <p>I was asked to build a minimalist template for one of my photographer clients. I liked it so much I decided park some of my photos and designs <a class="modala" href="index.html">there</a>; it's built to be responsive and can be customized for anything from photography to an online storefront.</p>
+          <p>[IMAGE AND LINK TO BE UPDATED] I was asked to build a minimalist template for one of my photographer clients. I liked it so much I decided park some of my photos and designs <a class="modala" href="index.html">there</a>; it's built to be responsive and can be customized for anything from photography to an online storefront.</p>
         </div>
         <div class="link-box">
            <a class="popup-modal-dismiss">Close</a>
