--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 
    <meta charset="utf-8">
-	<title>Vaughn Antonyan</title>
+	<title>Built By Vaughn</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -72,7 +72,7 @@
          <div class="nine columns main-col">
             <h2>About Me</h2>
             <p>Early in life I was fortunate to fall in love with the magic of music & technology.
-              A fan of thoughful conversation, passionate for all things tech, and obsessed with constant progression. I'm currently working
+              A fan of thoughtful conversation, passionate for all things tech, and obsessed with constant progression. I'm currently working
               on building a revolutionary on-demand software platform; make sure to check back for details as the project comes to fruition!
               </aside>
             </p>
