New portfolio item

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
              <div class="columns portfolio-item">
                 <div class="item-wrap">
                    <a href="#modal-10" title="">
-                      <img alt="" src="images/matt.jpg">
+                      <img alt="" src="images/minimal.jpg">
                       <div class="overlay">
                          <div class="portfolio-item-meta">
                             <h5>Minimalist Template</h5>
@@ -477,10 +477,10 @@
        </div>
 
        <div id="modal-10" class="popup-modal mfp-hide">
-        <img class="scale-with-grid" src="images/m-matt.jpg" alt="" />
+        <img class="scale-with-grid" src="images/minimal-m.jpg" alt="" />
         <div class="description-box">
           <h4>Minimalist Website Template</h4>
-          <p>[IMAGE AND LINK TO BE UPDATED] I was asked to build a minimalist template for one of my photographer clients. I liked it so much I decided park some of my photos and designs <a class="modala" href="index.html">there</a>; it's built to be responsive and can be customized for anything from photography to an online storefront.</p>
+          <p>I was asked to build a minimalist template for one of my photographer clients. I liked it so much I decided park some of my photos and designs <a class="modala" href="https://vaughnanton.github.io/minimalSite/">there</a>; it's built to be responsive and can be customized for anything from photography to an online storefront.</p>
         </div>
         <div class="link-box">
            <a class="popup-modal-dismiss">Close</a>
