--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 
    <meta charset="utf-8">
-	<title>Built By Vaughn</title>
+	<title>/ Built By Vaughn \</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
