--- a/index.html
+++ b/index.html
@@ -504,8 +504,8 @@
                 <p class="address">
                   Vaughn Antonyan<br>
                   Los Angeles, CA USA<br>
-                  <span>(818) 653-0384</span><br>
-                  <a href="mailto:frontdesk@builtbyvaughn.com?Subject=Hello%20">frontdesk@builtbyvaughn.com</a>
+                  <span>(xxx) xxx-xxxx</span><br>
+                  <a href="#">email@website.com</a>
                 </p>
               </div>
             </div>
