--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
               <div class="widget widget_contact contact">
                 <h4>Contact Details</h4>
                 <p class="address">
-                  Vaughn Antonyan<br>
+                  Vaughn Anton<br>
                   Los Angeles, CA USA<br>
                   <span>(xxx) xxx-xxxx</span><br>
                   <a href="#">email@website.com</a>
